# internal/apigateway/controller/http/v1/dto/auth.go
@@ -1,23 +1,23 @@
 package dto
 
 type UserCreds struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=5"`
 }
 
 type JwtToken struct {
-	AccessToken  string `json:"accessToken"`
-	RefreshToken string `json:"refreshToken"`
+	AccessToken  string `json:"accessToken" binding:"required"`
+	RefreshToken string `json:"refreshToken" binding:"required"`
 }
 
 type RenewTokenRequest struct {
-	RefreshToken string `json:"refreshToken"`
+	RefreshToken string `json:"refreshToken" binding:"required"`
 }
 
 type SendConfirmCodeRequest struct {
-	Email string `json:"email"`
+	Email string `json:"email" binding:"required,email"`
 }
 
 type ConfirmUserRequest struct {
-	Code string `json:"code"`
+	Code string `json:"code" binding:"required,min=4,max=4"`
 }
